--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:background="@android:color/transparent"/>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="47dp"
         android:layout_marginTop="20dp"
@@ -29,7 +30,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
-        <Spinner
+        <AutoCompleteTextView
+            android:id="@+id/firstLangSelector"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -37,14 +39,16 @@
             android:layout_weight="1"
             android:padding="3dp" />
 
-        <ImageView
-            android:layout_width="0dp"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSwitchLang"
+            style="@style/IconOnlyButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:src="@drawable/arrows" />
+            android:text=""
+            app:icon="@drawable/ic_compare_arrows_black_24dp" />
 
-        <Spinner
+        <AutoCompleteTextView
+            android:id="@+id/secondLangSelector"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -54,8 +58,48 @@
 
     </LinearLayout>
 
+    <ToggleButton
+        android:id="@+id/btnFirstModel"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:textOff="Скачать"
+        android:textOn="Удалить"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <ToggleButton
+        android:id="@+id/btnSecondModel"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:textOff="Скачать"
+        android:textOn="Удалить"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <Button
+        android:id="@+id/btnTranslate"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Перевод"
+        app:layout_constraintEnd_toStartOf="@+id/btnSecondModel"
+        app:layout_constraintStart_toEndOf="@+id/btnFirstModel"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/downloadedModels"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/downloaded_models_label"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.303" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginTop="84dp"
@@ -64,22 +108,22 @@
         android:padding="5dp"
         app:boxBackgroundMode="none"
         app:hintEnabled="false"
+        android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/sourceText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="@color/grey"
-            android:ems="10"
-            android:hint="Перевести текст"
-            android:importantForAutofill="no"
-            android:inputType="textImeMultiLine|textMultiLine"
-            android:textColor="@color/black"
-            android:textSize="19dp" />
+            android:layout_height="match_parent"
+            android:gravity="top"
+            android:hint="@string/translated_text_hint"
+            android:textSize="19dp"
+            />
+
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,17 +142,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <TextView
+            android:id="@+id/targetText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="@drawable/background"
-            android:ems="10"
-            android:hint="Вывод"
-            android:importantForAutofill="no"
-            android:inputType="textImeMultiLine|textMultiLine"
-            android:textColor="@color/black"
-            android:textSize="19dp" />
+            android:layout_height="match_parent"
+            android:gravity="top"
+            android:hint="@string/translated_text_hint"
+            />
 
 
 
