build 1.11 Добавлена кнопка копирования текста

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -152,12 +152,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
+
         <TextView
             android:id="@+id/targetText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="top"
             android:hint="@string/translated_text_hint" />
+        <ImageButton
+            android:id="@+id/btnCopy"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/ic_copy"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
