--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,26 @@
 
     <ImageButton
         android:id="@+id/btnSettings"
-        android:layout_width="54dp"
-        android:layout_height="57dp"
-        android:src="@drawable/settings"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible"
         android:background="@android:color/transparent"/>
 
     <ImageButton
-        android:id="@+id/btnMic"
+        android:id="@+id/btnHistory"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_history"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btnMic"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/mic_background"
         android:src="@drawable/ic_mic"
@@ -57,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            app:icon="@drawable/ic_compare_arrows_black_24dp" />
+            app:icon="@drawable/ic_arrows" />
 
         <AutoCompleteTextView
             android:id="@+id/secondLangSelector"
